--- a/README
+++ b/README
@@ -11,6 +11,7 @@ Requires
 1. json-c ( http://oss.metaparadigm.com/json-c/ )
 2. mongo-c-driver ( http://github.com/mongodb/mongo-c-driver )
 3. tcl ( http://tcl.tk/ )
+4. tokyo cabinet ( http://fallabs.com/tokyocabinet/ )
 
 
 Usage
@@ -21,4 +22,5 @@ usage:
   ./srldtest import db json_file
   ./srldtest dump db
   ./srldtest sum db key
-
+  ./srldtest find db key
+  ./srldtest group db key
